# IPM_Lane_Detection

./: Dockerfile  README.md  docker_run.sh
lane_detect/: CMakeLists.txt  package.xml
lane_detect/config/: rviz_config.rviz
lane_detect/launch/: visualise_ipm_lane_detect.launch.py
lane_detect/src/: image_publisher.py  ipm_lane_detect.py  ipm_utilities.py
